changing spacing because of firefox issues.

--- a/src/sass/sections/_details.scss
+++ b/src/sass/sections/_details.scss
@@ -7,6 +7,7 @@
         &__headline {
             line-height: 1.2;
             height: 2.75em;
+            margin-top: .9em;
         }
         &__text {
             p {
@@ -19,12 +20,13 @@
             margin-top: 4em;
             height: auto;
             &__icon {
-                padding-bottom: 2em;
+                padding-bottom: 0;
+                margin-bottom: -2em;
+                margin-top: 2.75em;
             }
             i {
                 font-size: 8em;
                 color: $hobexDarkGrey;
-                vertical-align: bottom;
             }
         }
         @include mq($from: $screen-xs + 50) {
